# RobotSoccer-MultiObjectDetector

./: .gitignore  README.md  browse.py  evaluate.py  import_bhlogs.py  pyproject.toml  train.ipynb  train.py
.dvc/: config
data/: .gitignore  README.md  b-human_predictions.dvc  evaluation.dvc  groundtruth.dvc  groundtruth_raw.dvc  groundtruth_tfrecords.dvc  grundtruth_raw.dvc  prelabeled.dvc  tfrecords.dvc
logs/: fit.dvc
models/: .gitignore  checkpoints.dvc  evaluation.dvc  finished.dvc
scripts/: clean_models.py  compare_results.sh  evaluation_pipeline.sh  multi_cpn_metrics.sh  multi_thresholdless_metrics.sh  multi_training.sh  run_dataset_pipeline.sh  save_datasets.sh
settings/: all_categories.yaml  all_categories_288x384_v1.yaml  all_categories_288x384_v2.yaml  all_categories_288x384_v3.yaml  all_categories_480x640_v1.yaml  all_categories_480x640_v2.yaml  all_categories_480x640_v3.yaml  all_categories_v1_240x320.yaml  all_categories_v1_320x448.yaml  all_categories_v1_416x576.yaml  all_categories_v2.yaml  all_categories_v4.yaml  all_categories_v5.yaml  all_categories_v5_256x320.yaml  config_default_light.yaml  config_inverted_residual_light.yaml  intersections.yaml  single_category.yaml
settings/classifier/: v0.yaml
settings/classifier-evaluation/: 288x384_v0.yaml  288x384_v1.yaml  288x384_v2.yaml  288x384_v3.yaml  288x384_v4.yaml  288x384_v5.yaml  288x384_v6.yaml  all_categories_288x384_v1.yaml  all_categories_288x384_v2.yaml  all_categories_288x384_v3.yaml
settings/classifier-n_ctx/: 288x384_v1.yaml  288x384_v2.yaml  288x384_v3.yaml  288x384_v4.yaml
settings/cpn/: v0.yaml
settings/cpn-evaluation/: 240x320_v1.yaml  240x320_v2.yaml  240x320_v3.yaml  288x384_v1.yaml  288x384_v2.yaml  288x384_v3.yaml  360x480_v1.yaml  360x480_v2.yaml  360x480_v3.yaml  432x576_v1.yaml  432x576_v2.yaml  432x576_v3.yaml  480x640_v1.yaml  480x640_v2.yaml  480x640_v3.yaml
settings/cpn-evaluation-grayscale/: 240x320_v1.yaml  240x320_v2.yaml  240x320_v3.yaml  288x384_v1.yaml  288x384_v2.yaml  288x384_v3.yaml  360x480_v1.yaml  360x480_v2.yaml  360x480_v3.yaml  432x576_v1.yaml  432x576_v2.yaml  432x576_v3.yaml  480x640_v1.yaml  480x640_v2.yaml  480x640_v3.yaml
settings/cpn-evaluation-yuyv/: 240x320_v1.yaml  240x320_v2.yaml  240x320_v3.yaml  288x384_v1.yaml  288x384_v2.yaml  288x384_v3.yaml  360x480_v1.yaml  360x480_v2.yaml  360x480_v3.yaml  432x576_v1.yaml  432x576_v2.yaml  432x576_v3.yaml  480x640_v1.yaml  480x640_v2.yaml  480x640_v3.yaml
settings/cpn-evaluation_grayscale/: 240x320_v1.yaml  240x320_v2.yaml  240x320_v3.yaml  288x384_v1.yaml  288x384_v2.yaml  288x384_v3.yaml  360x480_v1.yaml  360x480_v2.yaml  360x480_v3.yaml  432x576_v1.yaml  432x576_v2.yaml  432x576_v3.yaml  480x640_v1.yaml  480x640_v2.yaml  480x640_v3.yaml
settings/ctx_vector_saturation/: 288x384_v4_128.yaml  288x384_v4_16.yaml  288x384_v4_256.yaml  288x384_v4_32.yaml  288x384_v4_64.yaml  288x384_v4_8.yaml  (+3 more)
src/: browse.py  dataset_from_selection.py  evaluate.py  import_bhlogs.py  labeling.py  save_dataset.py  split_dataset.py  statistics.py  train.py
train/: layers.py  models.py
util/: augmentation.py  camera.py  dataset.py  image.py  labels.py
(+61 files in other folders)
