[project]
name = "ma-labelingtool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "albumentations>=2.0.5",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.4",
    "opencv-python>=4.11.0.86",
    "pybh>=0.3.9",
    "pyturbojpeg>=1.7.7",
    "tensorflow<2.17; sys_platform == 'darwin'",
    "tensorflow<2.17; sys_platform == 'Windows'",
]

[tool.uv.sources]
pybh = { index = "pybh" }

[[tool.uv.index]]
name = "pybh"
url = "https://gitlab.informatik.uni-bremen.de/api/v4/projects/7408/packages/pypi/simple"
default = true
authenticate = "always"


