[project]
name = "MultiObjectDetector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.19"
dependencies = [
    "albumentations>=2.0.5",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.4",
    "opencv-python>=4.11.0.86",
    "pybh>=0.3.9",
    "pyturbojpeg>=1.7.7",
    "tensorflow<2.16.2; sys_platform == 'darwin'",
    "tensorflow<2.16.2; sys_platform == 'Windows'",
    "tensorflow[and-cuda]==2.16.2; sys_platform == 'linux'",
    "pyqt6>=6.9.0",
    "scipy>=1.15.2",
    "dvc>=3.63.0",
    "dvc-ssh>=4.2.1",
    "shapely>=2.1.2",
    "scikit-learn>=1.7.2",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "setuptools<=81.0.0",
    "tensorboard>=2.16.2",
    "tf2onnx==1.16.1",
    "seaborn>=0.13.2",
]

[tool.uv.sources]
pybh = { index = "pybh" }

[[tool.uv.index]]
name = "pybh"
url = "https://gitlab.informatik.uni-bremen.de/api/v4/projects/7408/packages/pypi/simple"
default = true
authenticate = "always"

[tool.ruff]
extend-include = ["*.ipynb"]  # Also include notebooks.
select = ["I", "B", "UP", "F", "SIM"]
ignore = [
    # Ignore some rules for now.
    "COM812",  # Interferes with formatting.
    "ERA",  # eradicate # Remove commented out code.
    "PLR0913",  # Too many arguments to function call.
    "TD002",  # No TODO author required.
    "TD003",  # No issue link required.
    "T201",  # using print statements in notebooks is ok.
    "FIX002",  # Here TODOs are used to describe future code features, so it's ok.
    "FBT001",  # I am okay with that :)
    "FBT002",  # I am okay with that :)
    "S311",  # Cryptographic security is not required here.
    "ANN003", # Checks that function **kwargs arguments have type annotations.
    "D100", # Checks for undocumented public module definitions
    "ANN001", #Checks that function arguments have type annotations.
    "ANN201", # Checks that public functions and methods have return type annotations
    "ANN202", # Checks that private functions and methods have return type annotations
    "PLR2004", # Checks for the use of unnamed numerical constants ("magic") values in comparisons.
    "S101", # Checks for uses of the assert keyword.
    "D103", # Checks for undocumented public function definitions.
    "D101", # Checks for undocumented public class definitions.
]
line-length = 100
show-fixes = true  # Enumerate all fixed violations.

[dependency-groups]
dev = [
    "ruff>=0.11.10",
]
